style.css
* {
  margin: 0;
  box-sizing: border-box;
}

body {
  background-image: linear-gradient(
    to right,
    #043520,
    #153d21,
    #254521,
    #354d22,
    #455522
  );
}

.container {
  background-image: url("images/unsBackg.jpg");
  object-fit: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 400px;
  border-bottom: none;
}

.nav_items {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 300;
}

nav {
  display: flex;
  justify-content: space-between;
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  border-bottom: 0.3px solid white;
}

nav .navbar {
  display: flex;
  justify-content: space-evenly;
  margin-top: 10px;
}

nav .myLogo {
  height: 50px;
  padding-left: 50px;
}

nav .navbar > li {
  list-style-type: none;
  margin-right: 25px;
  margin-top: 5px;
}

.navbar li a {
  color: white;
  text-decoration: none;
  font-size: 24px;
}

/* nav li a:hover {
  color: grey;
} */

.me {
  width: 30%;
  min-height: 320px;
  display: flex;
  align-items: flex-end;
  text-align: center;
}
.myName {
  font-family: "Quicksand", sans-serif;
  margin-left: 60px;
  color: white;
}

.myName h2 {
  font-size: 32px;
}

.myName h4 {
  font-size: 20px;
}
.about li {
  list-style-type: square;
}

#about {
  display: flex;
  justify-content: space-around;
  color: white;
}

.aboutMe2 {
  display: flex;
  flex-direction: column;
  width: 30%;
  gap: 20px;
}
.aboutMe h3 {
  margin: 32px 0;
  font-size: 24px;
  font-family: "Quicksand", sans-serif;
}

.svg {
  display: flex;
  gap: 30px;
  margin: 32px 0;
  font-size: 24px;
  font-family: "Quicksand", sans-serif;
  color: white;
}

.pictSvg {
  height: 80px;
}

/* .aboutMe h4 {
  margin-bottom: 5px;
  font-size: 18px;
} */

.aboutMe p {
  line-height: 25px;
  font-size: 18px;
}

.aboutMe2 h4 {
  font-size: 18px;
}

.tech {
  margin-top: 15px;
}

.icons,
img {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  flex-shrink: 0;
  margin: 5px;
}
.icons,
img:first-child {
  margin-left: 0;
}

.touch {
  font-size: large;
  margin-top: 15px;
}

.btn {
  padding: 10px;
  color: white;
  cursor: pointer;
  margin: 6px;
  background-color: rgb(78, 81, 81);
  transition: background-color 500ms linear 0s;
  letter-spacing: 0.5px;
  border-radius: 5px;
}

.btn:hover {
  background-color: #242422;
}

.btn a {
  color: white;
  text-decoration: none;
}

.profile {
  clip-path: circle();
  margin-top: 20px;
  height: 331px;
  width: 300px;
  /*   float: right; */
}

.buttons {
  margin-top: 10px;
}

.svg2 {
  margin-left: 12%;
  margin-top: 100px;
  width: 100%;
}

.svg2 h3 {
  margin: 32px 0;
  font-size: 24px;
  font-family: "Quicksand", sans-serif;
}

.projects {
  display: flex;
  flex-direction: column;
  margin: auto;
  padding: 10px;
  width: 60%;
  border: 4px solid #04482a;
  box-shadow: 11.6px 7.5px 4.5px rgba(0, 0, 0, 0.04),
    93px 60px 36px rgba(0, 0, 0, 0.08);
  /* box-shadow: -10px 5px 20px rgba(0, 0, 0, 0.3); */
}

.game {
  display: flex;
  justify-content: stretch;
}

.game img {
  width: 400px;
}

.aboutProject {
  border: 1px solid black;
  padding: 40px;
  text-align: center;
  color: white;
  background-color: rgb(52, 52, 52);
}

.aboutProject .first {
  letter-spacing: 2px;
  margin-left: 3px;
  font-size: 14px;
}

.aboutProject p {
  margin-top: 10px;
}

.clock {
  margin-top: 20px;
}
.fab,
.fas {
  color: white;
  margin-left: 15px;
  margin-top: 15px;
}

.fab:hover,
.fas:hover {
  color: grey;
}

/* Contact Form */

#contact {
  display: flex;
  flex-direction: row;
  width: 80%;
  margin: 0 auto;
}

.right {
  width: 45%;
  max-width: none;
  display: flex;
  flex-direction: row;
  justify-content: center;

  color: #fff;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
  padding: 50px;
}

.title {
  font-size: 25px;
  font-weight: bold;
  margin-bottom: 20px;
}
label {
  display: block;
  margin-bottom: 5px;
}

form div input {
  width: 100%;
  height: 40px;
  border-radius: 8px;
  outline: none;
  border: 2px solid #c4c4c4;
  padding: 0 30px;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
}

form div textarea {
  width: 100%;
  border-radius: 8px;
  outline: none;
  border: 2px solid #c4c4c4;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
}

form div {
  position: relative;
  margin-bottom: 15px;
}

input:focus,
textarea:focus {
  border: 2px solid #077acc;
}

form div .fam {
  color: black;
  position: absolute;
  padding: 10px;
  margin: 0;
}

#btn {
  color: #fff;
  margin-top: 15px;
  width: 100%;
  height: 45px;
  background-color: #077acc;
  border: 2px solid #077acc;
  border-radius: 8px;
  font-size: 20px;
  cursor: pointer;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
  transition: all 0.1s ease;
}
form h4 {
  text-align: center;
}

#btn:hover {
  opacity: 0.8;
}

.btn2,
.btn3 {
  width: 50px;
  height: 50px;
  background-color: white;
  gap: 15px;
}

.left {
  display: flex;
  flex-direction: row;
  width: 55%;
}

.content {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  background-image: linear-gradient(
    to right bottom,
    #462bb5,
    #4747c3,
    #4e5fce,
    #5976d8,
    #6a8cdf,
    #649eea,
    #63aff2,
    #69bff8,
    #52cffe,
    #41dfff,
    #46eefa,
    #5ffbf1
  );
  width: 100%;
}

.contact-icons {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  margin-top: 20px;
}

.contact-icons a img {
  width: 50px;
}

.logo img {
  width: 180px;
}

.image {
  background-image: url(images/ilustrations/undraw_Envelope_re_f5j4.svg);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  height: 65%;
}

.section-hidden {
  opacity: 0;
  transform: translateY(50px);
}

